# python_docker_skel

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  pyproject.toml
app/: main.py
tests/: test_app.py
