[tool.poetry]
name = "CHANGEME"
version = "0.1.0"
description = "CHANGEME"
authors = ["Morgan Baron <morgan@unlisted.org>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
