[tool.poetry]
name = "CHANGEME"
version = "0.1.0"
description = "CHANGEME"
authors = ["Morgan Baron <morgan@unlisted.org>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
